--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -799,3 +799,13 @@ msgstr "Tots els esdeveniments"
 
 msgid "directori_filtrat"
 msgstr "Filtrat per unitat?"
+
+######################
+#  Portlet Full News #
+######################
+
+msgid "FullNews"
+msgstr "Notícies enriquides"
+
+msgid "homepage_portlet"
+msgstr "Benvingut"
