added language option "link to root" in control panel

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -809,3 +809,13 @@ msgstr "Notícies enriquides"
 
 msgid "homepage_portlet"
 msgstr "Benvingut"
+
+#############################################
+#  Contropanel option to redirect languages #
+#############################################
+
+msgid "languages_link_to_root"
+msgstr "Redireccionar a l'arrel del lloc al clicar sobre els idiomes del portal"
+
+msgid "help_languages_link_to_root"
+msgstr "Aquesta opció marcada fa que el desplegable d'idiomes, sempre redirigeixi a l'arrel del lloc web."
