solved error in lang selector if someone calls an inexistent or hidden lang

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -822,3 +822,6 @@ msgstr "Aquesta opció marcada fa que el desplegable d'idiomes, sempre redirigei
 
 msgid "return_to_view"
 msgstr "Torna"
+
+msgid "language not visible"
+msgstr "Idioma no visible"
