--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -430,3 +430,6 @@ msgstr "Selecting this option makes that all the clicks on the languages combo a
 
 msgid "return_to_view"
 msgstr "Return"
+
+msgid "language not visible"
+msgstr "Language not visible"
