--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -1236,8 +1236,8 @@ msgstr "Esta opción seleccionada hace que el desplegable de idiomas siempre red
 msgid "return_to_view"
 msgstr "Regresa"
 
-msgid "language not visible"
-msgstr "Idioma no visible"
+msgid "Not published"
+msgstr "(Idioma no publicado)"
 
 msgid "FullNews"
 msgstr "Noticias con foto"
