--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -826,5 +826,5 @@ msgstr "Aquesta opció marcada fa que el desplegable d'idiomes, sempre redirigei
 msgid "return_to_view"
 msgstr "Torna"
 
-msgid "language not visible"
-msgstr "Idioma no visible"
+msgid "Not published"
+msgstr "(Idioma no publicat)"
