added params i18n in language bar

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -828,3 +828,6 @@ msgstr "Torna"
 
 msgid "Not published"
 msgstr "(Idioma no publicat)"
+
+msgid "not a valid language"
+msgstr "[${results} no és un idioma vàlid]"
