--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -433,3 +433,6 @@ msgstr "Return"
 
 msgid "Not published"
 msgstr "(Language not published)"
+
+msgid "not a valid language"
+msgstr "[${results} is not a valid language]"
