--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,5 +1,10 @@
 Changelog
 =========
+
+4.1.5 (2012-03-01)
+------------------
+- Translations
+
 4.1.4 (2012-03-01)
 ------------------
 - Permissos del root
