--- a/docs/HISTORY.txt
+++ b/docs/HISTORY.txt
@@ -1,6 +1,12 @@
 Changelog
 =========
 
+4.1.7 (unreleased)
+------------------
+
+- Nothing changed yet.
+
+
 4.1.6 (2014-02-06)
 ------------------
 
