Add i18n strings for filtered_search_view and put more preference on permissions declarations

--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -575,6 +575,9 @@ msgstr "Hereta"
 msgid "read_more"
 msgstr "Veure més"
 
+msgid "filtered_contents_search_view"
+msgstr "Vista filtrada"
+
 #######
 # .js #
 #######
