--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -1250,3 +1250,6 @@ msgstr "[${results} no es un idioma válido]"
 
 msgid "inici_page"
 msgstr "Inicio de la página"
+
+msgid "filtered_contents_search_view"
+msgstr "Vista filtrada"
