--- a/genweb/core/locales/zh/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/zh/LC_MESSAGES/genweb.po
@@ -139,3 +139,6 @@ msgstr "Help"
 
 msgid "obrir_link_finestra_nova"
 msgstr "(open link in a new window)"
+
+msgid "root_folder_neutral"
+msgstr "Neutral"
