--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -846,3 +846,6 @@ msgstr "Inici de la pàgina"
 
 msgid "root_folder_neutral"
 msgstr "Neutre"
+
+msgid "button_sendevent"
+msgstr "Envia a l'agenda general de la UPC"
