--- a/genweb/core/locales/ca/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/genweb.po
@@ -849,3 +849,6 @@ msgstr "Neutre"
 
 msgid "button_sendevent"
 msgstr "Envia a l'agenda general de la UPC"
+
+msgid "personalbar_default_language"
+msgstr "(per defecte)"
