--- a/genweb/core/locales/es/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/es/LC_MESSAGES/genweb.po
@@ -1265,3 +1265,6 @@ msgstr "Neutral"
 
 msgid "personalbar_default_language"
 msgstr "(por defecto)"
+
+msgid "shared_folder"
+msgstr "Contenidos compartidos"
