--- a/genweb/core/locales/zh/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/zh/LC_MESSAGES/genweb.po
@@ -142,3 +142,6 @@ msgstr "(open link in a new window)"
 
 msgid "root_folder_neutral"
 msgstr "Neutral"
+
+msgid "shared_folder"
+msgstr "Shared folder"
