--- a/genweb/core/locales/es/LC_MESSAGES/upc.genwebupc.po
+++ b/genweb/core/locales/es/LC_MESSAGES/upc.genwebupc.po
@@ -338,3 +338,10 @@ msgstr "Compartir en Twitter"
 
 msgid "genweb_info_gral"
 msgstr "Información general del máster"
+
+msgid "cookie_policy_this_site"
+msgstr "Esta web utiliza <em>cookies</em> propias para ofrecerle una mejor experiencia y servicio. Si continúa la navegación, entendemos que acepta nuestra "
+
+msgid "cookie_policy"
+msgstr "política de <em>cookies</em>"
+
