--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -472,3 +472,12 @@ msgstr "Tools"
 
 msgid "genweb-roots"
 msgstr "Root folders"
+
+msgid "cookie_policy_this_site"
+msgstr "This website uses cookies to offer you the best experience and service. If you continue browsing, it is understood that you accept our "
+
+msgid "cookie_policy"
+msgstr "cookies policy"
+
+msgid "genweb-disclaimer"
+msgstr "Disclaimer"
