--- a/genweb/core/locales/es/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/es/LC_MESSAGES/plone.po
@@ -325,3 +325,9 @@ msgstr "Código de control"
 
 msgid "genweb_help_type_the_code"
 msgstr "Escriba las palabras de la imagen inferior"
+
+msgid "UPCnews"
+msgstr "Actualidad UPC"
+
+msgid "more_news_link"
+msgstr "Más noticias"
