--- a/genweb/core/locales/ca/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/ca/LC_MESSAGES/plone.po
@@ -366,3 +366,9 @@ msgstr "Pàgina"
 
 msgid "portlet_poll_title"
 msgstr "Enquesta"
+
+msgid "UPCnews"
+msgstr "Actualitat UPC"
+
+msgid "more_news_link"
+msgstr "Més notícies"
