--- a/genweb/core/locales/en/LC_MESSAGES/plone.po
+++ b/genweb/core/locales/en/LC_MESSAGES/plone.po
@@ -32,7 +32,7 @@ msgstr "Type the code from the picture shown below"
 msgid "Send"
 msgstr "send"
 
-msgid "UPCnews"
+msgid "UPCNews"
 msgstr "UPC Today"
 
 msgid "more_news_link"
