--- a/genweb/core/locales/en/LC_MESSAGES/upc.genwebupc.po
+++ b/genweb/core/locales/en/LC_MESSAGES/upc.genwebupc.po
@@ -62,7 +62,7 @@ msgid "genweb-accessibility"
 msgstr "Accessibility"
 
 msgid "genweb-actualitat"
-msgstr "UPC Today"
+msgstr "UPC Today <i class=\"icon-news large-icon pull-right\"></i>"
 
 msgid "genweb-noticies"
 msgstr "News"
