--- a/genweb/core/locales/en/LC_MESSAGES/genweb.po
+++ b/genweb/core/locales/en/LC_MESSAGES/genweb.po
@@ -97,7 +97,7 @@ msgid "genweb-actualitat"
 msgstr "UPC Today <i class=\"icon-news large-icon pull-right\"></i>"
 
 msgid "genweb-noticies"
-msgstr "News"
+msgstr "News <i class=\"icon-news large-icon pull-right\"></i>"
 
 msgid "genweb-agenda"
 msgstr "Agenda"
